@@ -1,6 +1,7 @@
 
 Object < #Example
-	instanceVariableNames: 'instVar1 instVar2'.
+	instanceVariableNames: 'instVar1 instVar2';
+	classVariableNames: 'classVar1 classVar2'.
 
 - set
   instVar1 := 1.
