@@ -1,3 +1,8 @@
+28/09/2011 Changes
+
+Adding more support for initializing Class variables.
+
+
 27/09/2011 Changes
 
 Added support for initializing Class variables.
